Update linting and autocorrect to latest style guide

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,14 +1,3 @@
-languages:
-  Ruby: true
-  JavaScript: false
-  PHP: false
-  Python: false
-exclude_paths:
-  - "lib/active_model/jobs/engine.rb"
-  - "lib/active_model/jobs/version.rb"
-engines:
+plugins:
   rubocop:
     enabled: true
-ratings:
-  paths:
-    - "**.rb"
